--- a/quandela-pushquantum-24/submission/Solutions.ipynb
+++ b/quandela-pushquantum-24/submission/Solutions.ipynb
@@ -346,30 +346,30 @@
     }
    ],
    "source": [
-    "circuit_train = pcvl.Circuit(6)\n",
+    "circuit = pcvl.Circuit(6)\n",
     "\n",
-    "circuit_train.add(1, H()).add(3, H())\n",
-    "circuit_train.add(1, Phi('theta1')).add(3, Phi('theta2'))\n",
-    "circuit_train.add(1, H()).add(3, H())\n",
-    "circuit_train.add(2, Phi('theta3')).add(4, Phi('theta4'))\n",
-    "circuit_train.add(2, H())\n",
-    "circuit_train.add(2, Phi('theta5'))\n",
-    "circuit_train.add(2, H())\n",
-    "circuit_train.add(1, Phi('theta6')).add(3, Phi('theta7'))\n",
-    "circuit_train.add(1, H()).add(3, H())\n",
-    "circuit_train.add(1, Phi('theta8')).add(3, Phi('theta9'))\n",
-    "circuit_train.add(1, H()).add(3, H())\n",
-    "circuit_train.add(2, Phi('theta10')).add(4, Phi('Phi11'))\n",
-    "circuit_train.add(2, H())\n",
-    "circuit_train.add(2, Phi('theta12'))\n",
-    "circuit_train.add(2, H())\n",
+    "circuit.add(1, H()).add(3, H())\n",
+    "circuit.add(1, Phi('theta1')).add(3, Phi('theta2'))\n",
+    "circuit.add(1, H()).add(3, H())\n",
+    "circuit.add(2, Phi('theta3')).add(4, Phi('theta4'))\n",
+    "circuit.add(2, H())\n",
+    "circuit.add(2, Phi('theta5'))\n",
+    "circuit.add(2, H())\n",
+    "circuit.add(1, Phi('theta6')).add(3, Phi('theta7'))\n",
+    "circuit.add(1, H()).add(3, H())\n",
+    "circuit.add(1, Phi('theta8')).add(3, Phi('theta9'))\n",
+    "circuit.add(1, H()).add(3, H())\n",
+    "circuit.add(2, Phi('theta10')).add(4, Phi('Phi11'))\n",
+    "circuit.add(2, H())\n",
+    "circuit.add(2, Phi('theta12'))\n",
+    "circuit.add(2, H())\n",
     "\n",
-    "pcvl.pdisplay(circuit_train)"
+    "pcvl.pdisplay(circuit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -474,14 +474,14 @@
     }
    ],
    "source": [
-    "circuit_measurement = pcvl.Circuit(6)\n",
+    "circuit = pcvl.Circuit(6)\n",
     "\n",
-    "circuit_measurement.add(1, Phi('phi1')).add(3, Phi('Phi2'))\n",
-    "circuit_measurement.add(1, H()).add(3, H())\n",
-    "circuit_measurement.add(1, Phi('phi3')).add(3, Phi('Phi4'))\n",
-    "circuit_measurement.add(1, H()).add(3, H())\n",
+    "circuit.add(1, Phi('phi1')).add(3, Phi('Phi2'))\n",
+    "circuit.add(1, H()).add(3, H())\n",
+    "circuit.add(1, Phi('phi3')).add(3, Phi('Phi4'))\n",
+    "circuit.add(1, H()).add(3, H())\n",
     "\n",
-    "pcvl.pdisplay(circuit_measurement)"
+    "pcvl.pdisplay(circuit)"
    ]
   },
   {
